# ncnn-android-yolox

./: local.properties
app/: build.gradle
app/src/main/jni/: CMakeLists.txt  ndkcamera.cpp  ndkcamera.h  yolox.cpp  yolox.h  yoloxncnn.cpp
